--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,6 +66,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="72dp"
+        android:backgroundTint="#0F5597"
         android:text="Agregar"
         app:layout_constraintStart_toStartOf="@+id/TxtApellido"
         app:layout_constraintTop_toBottomOf="@+id/TxtApellido" />
@@ -76,6 +77,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="48dp"
         android:layout_marginTop="72dp"
+        android:backgroundTint="#0F5597"
         android:text="Mostrar"
         app:layout_constraintStart_toEndOf="@+id/btnGuardar"
         app:layout_constraintTop_toBottomOf="@+id/idApel" />
