--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
         app:layout_constraintHorizontal_bias="0.139"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.279" />
+        app:layout_constraintVertical_bias="0.116" />
 
     <TextView
         android:id="@+id/TxtApellido"
@@ -81,5 +81,13 @@
         android:text="Mostrar"
         app:layout_constraintStart_toEndOf="@+id/btnGuardar"
         app:layout_constraintTop_toBottomOf="@+id/idApel" />
+
+    <Spinner
+        android:id="@+id/lvL"
+        android:layout_width="299dp"
+        android:layout_height="120dp"
+        android:layout_marginTop="252dp"
+        app:layout_constraintEnd_toEndOf="@+id/btnMostrar"
+        app:layout_constraintTop_toBottomOf="@+id/btnMostrar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
